--- a/_includes/article.liquid
+++ b/_includes/article.liquid
@@ -5,9 +5,10 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Конституція України</title>
+    <title>Конституція України | Стаття {{ number }}</title>
 </head>
 <body>
+<h1>{{ number }}</h1>
 {{ content }}
 </body>
 </html>
