chapter: link to constitution

--- a/_includes/chapter.njk
+++ b/_includes/chapter.njk
@@ -9,3 +9,4 @@ layout: 'general.njk'
     <h2><a href="{{ post.url | url }}">Стаття {{ post.data.number }}</a></h2>
     {{ post.templateContent | safe }}
 {% endfor %}
+<p><a href="/">⬅ Конституція України</a></p>
