--- a/styles/main.css
+++ b/styles/main.css
@@ -2,6 +2,8 @@
     --px-font-size: 16px;
     --fr-line-height: 1.625;
     --rem-line-height: 1.625rem;
+    --color-divider-main: #aaa;
+    --color-divider-secondary: #e6e6e6;
 }
 
 *, *:after, *:before {
@@ -27,6 +29,7 @@ body {
 
 .bottom-nav {
     display: flex;
+    margin-top: calc(2 * var(--rem-line-height));
 }
 
 .bottom-nav .right {
@@ -34,10 +37,23 @@ body {
 }
 
 .top-nav {
-    border-bottom: 1px solid #e6e6e6;
+    display: flex;
+    justify-content: center;
+    border-bottom: 1px solid var(--color-divider-secondary);
     margin-top: var(--rem-line-height);
     margin-bottom: -1px;
     padding-bottom: var(--rem-line-height);
+}
+
+.top-nav a:nth-child(n+2) {
+    margin-left: 1rem;
+}
+
+.top-nav a:nth-child(n+2):before {
+    position: relative;
+    left: -.5rem;
+    content: '';
+    border-left: 1px solid var(--color-divider-main);
 }
 
 .page {
@@ -99,8 +115,16 @@ ol, ul {
     text-align: center;
 }
 
+.space-top-1 {
+    margin-top: var(--rem-line-height);
+}
+
 .space-top-3 {
     margin-top: calc(3 * var(--rem-line-height));
+}
+
+.space-bottom-1 {
+    margin-bottom: var(--rem-line-height);
 }
 
 @media (max-width: 760px) {
